--- a/AutoPause/AutoPause.csproj
+++ b/AutoPause/AutoPause.csproj
@@ -37,12 +37,22 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove="Views\point-list.bsml" />
+      <None Remove="Resources\fps.ogg" />
+      <None Remove="Resources\tracking.ogg" />
+      <None Remove="Views\settings.bsml" />
     </ItemGroup>
 
     <ItemGroup>
         <Reference Include="BSML">
           <HintPath>$(BeatSaberDir)\Plugins\BSML.dll</HintPath>
+        </Reference>
+        <Reference Include="GameplayCore">
+          <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\GameplayCore.dll</HintPath>
+          <Private>False</Private>
+        </Reference>
+        <Reference Include="MediaLoader">
+          <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\MediaLoader.dll</HintPath>
+          <Private>False</Private>
         </Reference>
         <Reference Include="Polyglot">
           <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Polyglot.dll</HintPath>
@@ -59,6 +69,10 @@
         <Reference Include="Unity.TextMeshPro">
             <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\Unity.TextMeshPro.dll</HintPath>
             <Private>true</Private>
+        </Reference>
+        <Reference Include="UnityEngine.AudioModule">
+          <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.AudioModule.dll</HintPath>
+          <Private>False</Private>
         </Reference>
         <Reference Include="UnityEngine.UI">
             <HintPath>$(BeatSaberDir)\Beat Saber_Data\Managed\UnityEngine.UI.dll</HintPath>
@@ -112,6 +126,9 @@
 
     <ItemGroup>
         <EmbeddedResource Include="manifest.json" />
+        <EmbeddedResource Include="Resources\fps.ogg" />
+        <EmbeddedResource Include="Resources\tracking.ogg" />
+        <EmbeddedResource Include="Views\settings.bsml" />
     </ItemGroup>
 
     <ItemGroup>
