--- a/AutoPause/manifest.json
+++ b/AutoPause/manifest.json
@@ -7,6 +7,11 @@
   "description": "A mod which pauses your game on tracking loss or FPS drops.",
   "gameVersion": "1.13.0",
   "dependsOn": {
-    "BSIPA": "^4.0.5"
-  }
+    "BSIPA": "^4.0.5",
+    "SiraUtil": "^2.2.0"
+  },
+  "conflictsWith": {
+    "NoodleExtensions": "*"
+  },
+  "loadBefore": [ "NoodleExtensions" ]
 }
