--- a/AutoPause/manifest.json
+++ b/AutoPause/manifest.json
@@ -8,7 +8,8 @@
   "gameVersion": "1.13.0",
   "dependsOn": {
     "BSIPA": "^4.0.5",
-    "SiraUtil": "^2.2.0"
+    "SiraUtil": "^2.2.0",
+    "BeatSaberMarkupLanguage": "^1.4.0"
   },
   "conflictsWith": {
     "NoodleExtensions": "*"
